Refactor/notification module email first (#6)
* feat(auth): redesign authentication flow with JWT optimization and cache-based authorization

- Removed permissions from JWT to reduce token size and prevent stale authorization
- Implemented dynamic permission loading using Redis cache with DB fallback
- Refactored JWT claims to include only identity fields (userId, tenantId, roleId, tokenVersion)
- Removed schemaName from JWT and API response for security and abstraction
- Restructured auth response into tokens, user, tenant, and session blocks
- Added token metadata (expiresIn, tokenType) for better frontend integration
- Improved separation of concerns between authentication and authorization

* feat(auth): implement slug-based tenant login
- Add SlugCacheService for slug → tenantId resolution (Redis cache)
- Add SlugGeneratorService for slug generation and validation
- Update LoginRequest/RefreshTokenRequest to use tenantSlug instead of tenantId
- Add /api/auth/tenants endpoint for two-step login UX
- Update AuthService to use slug resolution chain
- Fix TenantResolutionResponse empty list serialization

* feat(auth): use tenantSlug for forgot/reset password
- Update ForgotPasswordRequest to use tenantSlug instead of tenantId
- Update ResetPasswordRequest to use tenantSlug instead of tenantId
- Update PasswordResetService to resolve tenantId via SlugCacheService
- Update Redis key format to use tenantSlug

* fix: updated properties file to use env variables for issuer and audience.

* refactor(auth): token cookie-only architecture with slug-based tenant resolution

## Summary
Refactored authentication to use cookie-only token storage (HttpOnly, Secure, SameSite=Lax)
with slug-based tenant identification, following enterprise security best practices.

## Changes

### Token Management
- Created TokenPair DTO to hold accessToken/refreshToken separately from AuthResponse
- Tokens are now set via cookies ONLY - never exposed in JSON response body
- Updated AuthResponse